<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/care_white"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_boton_fondo"
        />

        <ScrollView
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    tools:text="@string/lb_welcome" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="vertical">


                        <com.appogeodigital.ccare.wigets.InputText
                            android:id="@+id/input_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="0dp"
                            android:inputType="textEmailAddress"
                            app:input_hint="@string/email"
                            app:input_title="@string/user"/>


                        <com.appogeodigital.ccare.wigets.InputTextPass
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="0dp"
                            android:inputType="textPassword"
                            app:input_hint="@string/pass_user"
                            app:input_title="@string/pass"/>


                    <TextView
                        android:id="@+id/remember_password"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:gravity="center_vertical"
                        android:text="@string/lb_recover_pass"
                        android:textColor="@color/care_purple" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/care_cian"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                     />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>